# UrbiCamera

./: .gitignore  CMakeLists.txt  TODO
debian/: README.Debian  README.source  changelog  control  copyright  liburbicamera2.7.install  liburbicolordetector2.7.install  liburbifacet2.7.install  liburbimovedetector2.7.install  liburbiobjectdetector2.7.install
src/: CMakeLists.txt  urbicamera.cpp  urbicolordetector.cpp  urbifacet.cpp  urbimovedetector.cpp  urbiobjectdetector.cpp
